--- a/kooplexhub/kooplex/hub/templates/app/notebooks.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks.html
@@ -16,9 +16,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
           {% if username %}
-              <li class="active" ><a href="#myprojects" data-toggle="tab" href="#myprojects">My projects</a></li>
-              <li><a href="#running" data-toggle="tab" href="#running">Running containers </a></li>
-              <li><a href="#otherprojects" data-toggle="tab" href="#otherprojects">Other public projects</a></li>
+              <li class="active" ><a href="#myprojects" data-toggle="tab">My projects</a></li>
+              <li><a href="#running" data-toggle="tab">Running containers </a></li>
+              <li><a href="#otherprojects" data-toggle="tab">Other public projects</a></li>
           {% endif %}
 
       </ul>
