--- a/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
@@ -1,25 +1,22 @@
 
 <div class="projects">
 
-    <h2>Public worksheets</h2>
+
     {% for item in dashboards %}
-     <div class="projects worksheet">
-<!--     <a href="{% url 'worksheet-open' %}?project_owner={{ item.owner  }}&project_name={{ item.name  }}" target="_blank">     -->
-       <a href="{% url 'worksheet-open' %}?project_owner={{ item.owner }}&project_name={{ item.name  }}&project_id={{ item.project_id }}&file={{ item.file }}" target="_blank">
-     <img src="{{ item.picture }}" width="300px">
- <p><span  style="padding-right: 50px;"><b>{{ item.owner }}</b> - <b>{{ item.name  }}</b></span></a>
-     </p>
-     <p> {{ item.description }} </p>
-
-        <div>
-        {%  if username == item.owner %}
-        <!-- REMOVE DEPLOY check if user and owner the same -->
-        <a href="{% url 'worksheet-unpublish' %}?project_owner={{ item.owner }}&project_name={{ item.name  }}&project_id={{ item.project_id }}&file={{ item.file }}"
-        <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Unpublish</button></a>
-
+        {%  if username == item.owner or  publicvar %}
+            <div class="projects worksheet">
+                <a href="{% url 'worksheet-open' %}?project_owner={{ item.owner }}&project_name={{ item.name  }}&project_id={{ item.project_id }}&file={{ item.file }}" target="_blank">
+                <img src="{{ item.picture }}" width="300px">
+                <p><span  style="padding-right: 50px;"><b>{{ item.owner }}</b> - <b>{{ item.name  }}</b></span></a>
+                </p>
+                <p> {{ item.description }} </p>
+                {%  if username == item.owner %}
+                <div>
+                    <a href="{% url 'worksheet-unpublish' %}?project_owner={{ item.owner }}&project_name={{ item.name  }}&project_id={{ item.project_id }}&file={{ item.file }}"
+                    <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Unpublish</button></a>
+                </div>
+                {% endif %}
+            </div>
         {% endif  %}
-        </div>
-        </div>
-
     {% endfor %}
    </div>
